--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Roboto Condensed', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
@@ -22,4 +23,9 @@ section{
     background-color: pink;
     padding: 10px 40px;
     border-radius: 5px;
+}
+.top-banner{
+    background-image: url(top-banner.png);
+    background-repeat: no-repeat;
+
 }
